--- a/index.html
+++ b/index.html
@@ -5,25 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basquiat</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <nav>
         <div class="inicio">
-            <button ><img src="Basquiat Corona.jpg" alt="Basquiat Corona" class="corona"></button>
+            <a href="#"><img src="Basquiat Corona.jpg" alt="Basquiat Corona" class="corona"></a>
         </div>
        <div class="opciones">
-        <div >
-            <button class="botones" >Cuadros</button>
-            <button class="botones">Biografia</button> 
-            <button class="botones">Museo</button>
-            <button class="botones">Merchandising</button>
-        </div>
+            <div >
+                 <ul class="opciones2">
+                    <li> <a class="botones" href="#">Cuadros</a> </li>
+                    <li> <a class="botones" href="#">Biografia</a> </li>
+                    <li> <a class="botones" href="#">Museo</a></li>
+                    <li><a class="botones" href="#">Merchandising</a></li>
+                </ul>
+            </div>
         <div>
             <input type="search" class="buscar" placeholder="Buscar">
         </div>
     </div>
     </nav>
-    
+    <section class="section1">
+        <img src="Basquiat2.jpg" alt="Basquiat " class="Basquiat" >
+        <span class="Jean_Michel_Basquiat">Jean-Michel Basquiat</span>
+    </section>
+    <section class="section2">
+        <p>Jean-Michel Basquiat (Nueva York, 22 de diciembre de 1960-ibídem; 12 de agosto de 1988) también conocido como SAMO, fue un artista estadounidense de ascendencia haitiana y puertorriqueña.</p>
+    </section>
 </body>
 </html>
